kubernetes/email-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: email-backend
  name: email-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: email-backend
  template:
    metadata:
      labels:
        io.kompose.network/email-default: "true"
        io.kompose.service: email-backend
    spec:
      containers:
        - env:
            - name: KAFKA_BROKERS
              valueFrom:
                secretKeyRef:
                  name: kafka-secrets
                  key: KAFKA_BROKERS
            - name: KAFKA_CLIENT
              value: email-consumer
            - name: KAFKA_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: kafka-secrets
                  key: KAFKA_PASSWORD
            - name: KAFKA_TOPIC
              value: email_topic
            - name: KAFKA_USERNAME
              valueFrom:
                secretKeyRef:
                  name: kafka-secrets
                  key: KAFKA_USERNAME
            - name: MAIL_HOST
              value: sandbox.smtp.mailtrap.io
            - name: MAIL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: email-secrets
                  key: MAIL_PASSWORD
            - name: MAIL_PORT
              value: "2525"
            - name: MAIL_USERNAME
              valueFrom:
                secretKeyRef:
                  name: email-secrets
                  key: MAIL_USERNAME
          image: vasyl/email:0.0.2
          name: email-backend
      # restartPolicy: Always
