kubernetes/checkout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: checkout-backend
  name: checkout-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: checkout-backend
  template:
    metadata:
      labels:
        io.kompose.service: checkout-backend
    spec:
      containers:
        - args:
            - npm
            - start
          image: antoniopapa/checkout:0.0.1
          name: checkout-backend
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: checkout-consumer
  name: checkout-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: checkout-consumer
  template:
    metadata:
      labels:
        io.kompose.service: checkout-consumer
    spec:
      containers:
        - args:
            - npm
            - run
            - consume
          image: antoniopapa/checkout:0.0.1
          name: checkout-consumer
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: checkout-backend
  name: checkout-backend
spec:
  ports:
    - name: "8004"
      port: 8004
      targetPort: 8000
  selector:
    io.kompose.service: checkout-backend
